[gd_scene load_steps=6 format=3 uid="uid://lruffug31t7w"]

[ext_resource type="Script" path="res://UI/inventory/displayer/item_slot.gd" id="1_frfm8"]
[ext_resource type="Texture2D" uid="uid://c8xdvkpy3qcy3" path="res://UI/inventory/asset/tool_watercan.png" id="2_yqyox"]
[ext_resource type="Texture2D" uid="uid://5xk6drraft0i" path="res://sun/sun.png" id="3_p5j7k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldkq3"]
bg_color = Color(0.803922, 0.658824, 0.341176, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.294118, 0.25098, 0.156863, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s0nf"]
atlas = ExtResource("3_p5j7k")
region = Rect2(0, 0, 24, 24)

[node name="Slot" type="Panel"]
custom_minimum_size = Vector2(20, 20)
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ldkq3")
script = ExtResource("1_frfm8")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(12, 12)
texture = ExtResource("2_yqyox")
expand_mode = 1
stretch_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -7.0
grow_horizontal = 0
grow_vertical = 0

[node name="QuantityDisplay" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -2.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "100"
horizontal_alignment = 1
clip_text = true

[node name="SunText" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 6.0
grow_vertical = 2
texture = SubResource("AtlasTexture_7s0nf")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
